argocd/prometheus-operator/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.prometheus.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kind-prometheus-kube-prom-prometheus
            port:
              number: 9090
